# fork-fastrender

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  vitest.config.cjs
.cargo/: aom_generic_toolchain.cmake  audit.toml  config.toml
benches/: audio_benches.rs  bookmark_contains_url.rs  bookmarks_manager_ui.rs  cascade_bench.rs  chrome_frame_render.rs  colr_sweep.rs  common.rs  css_parse_pageset.rs  disk_cache_contention.rs  dom_clone_bench.rs  dom_parse_bench.rs  downloads_panel_ui.rs  element_attr_cache_bench.rs  float_bench.rs  formatting_context_factory.rs  fragment_clone.rs  fragmentation_bench.rs  gradient_raster.rs  history_search_tokens.rs  html_parse_bench.rs  http_agent_pool.rs  image_compare_bench.rs  layout_hotspots.rs  layout_parallel.rs  omnibox_bookmarks.rs  paint_benches.rs  perf_regressions.rs  reshape_cache_bench.rs  scroll_blit_bench.rs  selector_bloom_bench.rs  selector_candidates_bench.rs  selector_link_bench.rs  tab_strip_ui.rs  (+5 more)
crates/fastrender-renderer/: Cargo.toml
crates/fastrender-renderer/src/: lib.rs  main.rs
crates/fastrender-renderer/tests/: oopif_csp_frame_src.rs  oopif_document_policy_redirects.rs  oopif_hit_testing_pointer_events.rs  oopif_hover_cursor_propagation.rs  oopif_referrer_policy.rs  site_lock_stdio.rs  stdio_ipc.rs
crates/fastrender-renderer/tests/common/: mod.rs
crates/js-dom-bindings/: Cargo.toml
crates/js-dom-bindings/src/: lib.rs
crates/js-wpt-dom-runner/: Cargo.toml
crates/js-wpt-dom-runner/src/: backend.rs  backend_quickjs.rs  backend_vmjs.rs  backend_vmjs_rendered.rs  cookie_jar.rs  discover.rs  dom_bindings.rs  dom_shims.rs  fetch.rs  lib.rs  meta.rs  runner.rs  suite.rs  timer_event_loop.rs  url_bindings.rs  url_shims.rs  window_or_worker_global_scope.rs  wpt_fs.rs  wpt_report.rs  wpt_resource_fetcher.rs
crates/js-wpt-dom-runner/src/engine/: mod.rs  quickjs.rs  vmjs.rs
crates/js-wpt-dom-runner/tests/: corpus_validation.rs  dependency_validation.rs  fastrender_event_loop_stepping_api.rs  js_html_integration_wpt_subset.rs  smoke.rs  suite_smoke.rs  vmjs_time_determinism.rs  wpt_resource_fetcher.rs
crates/libvpx-sys-bundled/: Cargo.toml  README.md  build.rs
crates/libvpx-sys-bundled/src/: lib.rs  vp9_decoder.rs
crates/libvpx-sys-bundled/tests/: decode_vp9.rs  decode_vp9_rgba.rs  version.rs  vp9_high_bit_depth.rs  vp9_limits.rs
crates/libvpx-sys-bundled/upstream/libvpx/vpx_ports/: float_control_word.c  vpx_ports.mk
crates/webidl-vm-js/: Cargo.toml  README.md
crates/webidl-vm-js/src/: bindings_runtime.rs  conversions.rs  lib.rs
crates/webidl-vm-js/tests/: bindings_runtime.rs  callback_handle.rs  callbacks.rs  conversions_callback_interface.rs  conversions_record.rs  conversions_sequence.rs  host_dispatch.rs
crates/win-sandbox/: Cargo.toml
crates/win-sandbox/examples/: probe.rs
crates/win-sandbox/src/: appcontainer.rs  child_process.rs  job.rs  lib.rs  mitigations.rs  renderer.rs  renderer_sandbox.rs  restricted_token.rs  spawn.rs  support.rs
crates/win-sandbox/tests/: all_application_packages_hardening.rs  appcontainer_cwd.rs  filesystem_denied.rs  handle_inheritance.rs  job_limits.rs  network_denied.rs  renderer_sandbox.rs  restricted_token_cwd.rs  restricted_token_mode.rs
crates/win-sandbox/tests/common/: mod.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: accessibility_tree.rs  audio_mixer.rs  audio_queue.rs  audio_resampler.rs  audio_ring_buffer.rs  color_fonts.rs  html_scanners.rs  image_decoding.rs  ipc_decode.rs  ipc_messages.rs  media_av_sync.rs  media_timebase.rs  process_assignment.rs  render_pipeline.rs  site_key.rs  svg_glyph_sanitizer.rs  text_line_break.rs  text_shaping.rs
xtask/: Cargo.toml
xtask/src/: analyze_lazy_loading.rs  browser.rs  capability_map.rs  capture_accuracy_fixtures.rs  capture_missing_failure_fixtures.rs  check_lib_builds.rs  chrome_baseline_fixtures.rs  cmd.rs  fixture_chrome_diff.rs  fixture_determinism.rs  fixture_html_patch.rs  freeze_page_fixture.rs  freeze_page_fixture_cmd.rs  generate_emoji_tables.rs  generate_regexp_unicode_property_strings.rs  generate_regexp_unicode_tables.rs  import_page_fixture.rs  js_string_literal.rs  lib.rs  lint_no_merge_conflicts.rs  lint_no_openssl.rs  lint_no_panics.rs  lint_test_global_state.rs  main.rs  main_renderer.rs  page_loop.rs  page_loop_plan.rs  pageset_failure_fixtures.rs  pageset_triage.rs  recapture_page_fixtures.rs  refresh_progress_accuracy.rs  sync_progress_accuracy.rs  update_pageset_guardrails.rs  update_pageset_guardrails_budgets.rs  validate_page_fixtures.rs  webidl_bindings_codegen.rs  webidl_codegen.rs
xtask/src/js/: mod.rs  test262.rs  test262_negative_parse.rs  test262_parser.rs  test262_report.rs  wpt_dom.rs
xtask/src/webidl/: analyze.rs  ast.rs  generate.rs  load.rs  mod.rs  overload.rs  overload_ir.rs  parse.rs  parse_dictionary.rs  resolve.rs  semantic.rs  type_resolution.rs
xtask/tests/: analyze_lazy_loading.rs  browser_command_args.rs  capture_accuracy_fixtures.rs  capture_missing_failure_fixtures.rs  cargo_agent_frame_pointers.rs  chrome_baseline_fixtures.rs  chrome_vs_fastrender_fixtures_wrapper.rs  cmake_wrapper_libaom.rs  diff_renders_args.rs  diff_renders_no_build.rs  disk_cache_args.rs  doc_lint_no_raw_cargo.rs  docs_safety.rs  fixture_chrome_diff.rs  fixture_chrome_diff_from_progress.rs  fixture_determinism.rs  freeze_page_fixture.rs  help.rs  import_page_fixture.rs  import_page_fixture_css_url_entity_quotes.rs  import_page_fixture_font_sniff.rs  import_page_fixture_html_entities.rs  import_page_fixture_paths.rs  js_test262_smoke.rs  js_wpt_dom.rs  js_wpt_dom_smoke.rs  lint_no_panics.rs  lint_no_raw_cargo_hints.rs  lint_no_test_global_mutations.rs  llvm_stackmaps_link_linux.rs  no_raw_cargo.rs  page_loop.rs  page_loop_plan.rs  pageset_extra_args.rs  pageset_failure_fixtures.rs  pageset_guardrails.rs  pageset_progress_command.rs  pageset_progress_sync.rs  pageset_sh_wrapper.rs  pageset_triage.rs  (+33 more)
xtask/tests/goldens/: webidl_bindings_codegen_attributes_and_constants_expected.rs  webidl_bindings_codegen_expected.rs  webidl_bindings_codegen_expected_vmjs.rs
(+5543 files in other folders)
