[package]
name = "fastrender"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust HTML/CSS to image renderer"
rust-version = "1.70"
publish = false

[workspace]
members = ["xtask", "crates/webidl-ir", "crates/js-wpt-dom-runner", "crates/webidl-js-runtime"]
# `engines/ecma-rs` is a nested workspace (git submodule). Exclude it so Cargo can build `vm-js`
# and friends using their own workspace-inherited metadata.
exclude = ["engines/ecma-rs"]
resolver = "2"

[features]
default = ["preserve3d_warp"]
box_generation_demo = []
disk_cache = ["fs2"]
preserve3d_warp = []
browser_ui = [
  "dep:winit",
  "dep:wgpu",
  "dep:egui",
  "dep:egui-winit",
  "dep:egui-wgpu",
  "dep:pollster",
]

[dependencies]
base64 = "0.22"
avif-decode = { version = "1.0", default-features = false }
avif-parse = "1.4"
brotli = "6"
clap = { version = "4", features = ["derive", "env"] }
chrono = "0.4.42"
csscolorparser = "0.6"
cssparser = "0.35"
flate2 = "1"
encoding_rs = "0.8"
fs2 = { version = "0.4", optional = true }
fontdb = "0.23"
html5ever = "0.35"
hyphenation = { version = "0.8", features = ["embed_en-us"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
libwebp-sys = "0.9.6"
lru = "0.12"
kamadak-exif = "0.6"
markup5ever = "0.35"
markup5ever_rcdom = "0.35"
memchr = "2.7"
png = "0.18"
smallvec = "1.15"
parking_lot = "0.12"
percent-encoding = "2.3"
precomputed-hash = "0.1"
rayon = "1.10.0"
resvg = "0.43"
svgtypes = "0.15"
roxmltree = "0.20"
rustybuzz = "0.20"
rustc-hash = "2"
im = "15.1"
selectors = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
pathdiff = "0.2"
glob = "0.3"
regex = "1"
tempfile = "3"
taffy = { path = "vendor/taffy" }
thiserror = "1.0"
tiny-skia = "0.11"
ttf-parser = "0.25"
unicode-bidi = "0.3"
unicode-bidi-mirroring = "0.4"
unicode-linebreak = "0.1"
unicode-segmentation = "1.11"
unicode-width = "0.1.11"
unicode-vo = "0.1"
unicode-general-category = "0.6"
url = "2.5"
urlencoding = "2.1"
publicsuffix = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "default-tls", "http2", "native-tls-alpn"] }
ureq = { version = "3.1", default-features = false, features = ["rustls"] }
wuff = "0.2"
tar = "0.4"
sha2 = "0.10"
httpdate = "1.0"
http = "1"
libc = "0.2"
read-fonts = "0.20"
skrifa = "0.20"
walkdir = "2"
webidl-js-runtime = { path = "crates/webidl-js-runtime" }
vm-js = { path = "engines/ecma-rs/vm-js" }

# Optional desktop UI stack (winit + wgpu + egui) used by `src/bin/browser.rs`.
# Kept behind a feature gate so core renderer builds stay lean.
wgpu = { version = "0.17", optional = true }
egui = { version = "0.23", optional = true }
egui-wgpu = { version = "0.23", optional = true }
pollster = { version = "0.3", optional = true }

# `winit`/`egui-winit` need a platform backend. On Linux we explicitly enable X11
# and keep default features off so CI doesn't need additional system packages
# for Wayland.
[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.28", default-features = false, features = ["x11"], optional = true }
egui-winit = { version = "0.23", default-features = false, features = ["x11"], optional = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
winit = { version = "0.28", default-features = false, optional = true }
egui-winit = { version = "0.23", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.5"
filetime = "0.2"
usvg = "0.43"

[[bench]]
name = "perf_regressions"
harness = false

[[bench]]
name = "http_agent_pool"
harness = false

[[bench]]
name = "disk_cache_contention"
harness = false

[[bench]]
name = "cascade_bench"
harness = false

[[bench]]
name = "table_fixup_traversal"
harness = false

[[bin]]
name = "bench_compare"
path = "tools/bench_compare.rs"

[[bin]]
name = "render_fixtures"
path = "src/bin/render_fixtures.rs"
test = false

[[bin]]
name = "browser"
path = "src/bin/browser.rs"
required-features = ["browser_ui"]
test = false

[[bench]]
name = "selector_bloom_bench"
harness = false

[[bench]]
name = "selector_link_bench"
harness = false

[[bench]]
name = "element_attr_cache_bench"
harness = false

[[bench]]
name = "selector_candidates_bench"
harness = false

[[bench]]
name = "layout_parallel"
harness = false

[[bench]]
name = "layout_hotspots"
harness = false

[[bench]]
name = "fragment_clone"
harness = false

[[bench]]
name = "dom_clone_bench"
harness = false

[[bench]]
name = "dom_parse_bench"
harness = false

[[bench]]
name = "html_parse_bench"
harness = false

[[bench]]
name = "css_parse_pageset"
harness = false

[[bench]]
name = "style_set_collectors"
harness = false

[[bench]]
name = "reshape_cache_bench"
harness = false

[[bench]]
name = "paint_benches"
harness = false

[[bench]]
name = "gradient_raster"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
selectors = { path = "vendor/selectors" }
