[package]
name = "fastrender"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust HTML/CSS to image renderer"
rust-version = "1.70"
publish = false

[workspace]
members = [
  "xtask",
  "crates/js-wpt-dom-runner",
  "crates/fastrender-ipc",
  "crates/fastrender-renderer",
  "crates/win-sandbox",
  "crates/libvpx-sys-bundled",
  "crates/fastrender-shmem",
]
# NOTE: WebIDL/JS infrastructure should live in `vendor/ecma-rs/` per
# instructions/ecma_rs_ownership.md and instructions/webidl_consolidation.md.
default-members = [
  ".",
  "xtask",
  "crates/js-wpt-dom-runner",
]
# `vendor/ecma-rs` is a nested workspace (vendored). Exclude it so Cargo can build `vm-js`
# and friends using their own workspace-inherited metadata.
exclude = ["vendor/ecma-rs"]
resolver = "2"

[features]
# `direct_network` / `direct_websocket` gate in-process network stacks. Sandboxed renderer builds
# should disable them and provide a `ResourceFetcher` that proxies over IPC.
default = ["preserve3d_warp", "avif", "direct_network", "direct_websocket", "direct_filesystem"]
a11y_debug = []
# Lightweight AccessKit support (types only). This is separate from `browser_ui_base`/`browser_ui`
# so core DOM/unit tests can exercise accessibility behaviors without pulling in the full desktop UI
# stack.
a11y_accesskit = ["dep:accesskit"]
avif = ["dep:avif-decode", "dep:avif-parse"]
audio_cpal = ["dep:cpal"]
# Offline WAV file sink backend for deterministic audio debugging/tests.
audio_wav = []
# Optional CLI-based media demux+decode fallback using system `ffmpeg`/`ffprobe` binaries.
media_ffmpeg_cli = []
box_generation_demo = []
disk_cache = ["fs2"]
preserve3d_warp = []
quickjs = ["dep:rquickjs"]
# Build the `macos_sandbox_probe` tool (macOS Seatbelt probe CLI).
#
# This is intentionally non-default so non-macOS CI/builds don't even consider the target.
macos_sandbox_probe = []
sandbox_diagnostics = []
# Direct (in-process) networking. Renderer builds should disable this feature so all network
# requests are mediated by a separate network/IPC process.
direct_network = ["dep:reqwest", "dep:ureq"]
# Direct (in-process) filesystem access (e.g. `file://` resources). Sandboxed renderer builds
# should disable this feature and inject a `ResourceFetcher` that proxies filesystem reads.
direct_filesystem = []
# Direct (in-process) WebSocket implementation for the vm-js Window realm.
direct_websocket = [
  "dep:tungstenite",
  "dep:rustls",
  "dep:webpki-roots",
  "dep:tokio",
  "dep:tokio-tungstenite",
  "dep:futures-util",
]
# Feature set for a renderer build that intentionally excludes any in-process network stacks.
# Used by CI (`--no-default-features --features renderer_minimal`) to ensure the renderer can be
# built without linking reqwest/ureq/tungstenite.
renderer_minimal = ["preserve3d_warp", "avif"]
# Base desktop UI stack (winit + wgpu + AccessKit) that can be used by non-egui frontends (e.g. the
# compositor UI backend).
browser_ui_base = [
  "dep:winit",
  "dep:wgpu",
  "dep:pollster",
  "dep:arboard",
  "a11y_accesskit",
  "dep:accesskit_winit",
  "dep:rfd",
  "dep:directories",
  "fs2",
  "media",
]
# Full egui-based desktop UI stack used by `src/bin/browser.rs` (depends on `browser_ui_base`).
browser_ui = [
  "browser_ui_base",
  "dep:egui",
  "dep:egui-winit",
  "dep:egui-wgpu",
]
browser_ui_wayland = [
  # Wayland backend support for the `browser` UI on Linux.
  #
  # `browser_ui` defaults to X11-only to avoid pulling in Wayland system deps on
  # minimal hosts/CI. Enable this feature in addition to `browser_ui` to compile
  # both X11 + Wayland backends (winit selects at runtime; can be forced via
  # `WINIT_UNIX_BACKEND=wayland`).
  "browser_ui",
  "winit/wayland",
  "egui-winit/wayland",
]

# Media playback support (video/audio).
#
# This is intentionally feature-gated to keep default builds lean and MSRV-stable: some codec
# backends pull in large C/C++ build dependencies (openh264, libvpx, opus).
media = [
  "media_mp4",
  "media_webm",
  "codec_h264_openh264",
  "codec_vp9_libvpx",
  "codec_aac",
  "codec_opus",
]
media_mp4 = ["dep:mp4", "dep:mp4parse"]
media_webm = ["dep:matroska-demuxer"]
codec_h264_openh264 = ["dep:openh264"]
codec_vp9_libvpx = ["dep:libvpx-sys-bundled"]
codec_aac = ["dep:symphonia-core", "dep:symphonia-codec-aac"]
codec_opus = ["dep:opus"]

# CI-friendly "all features" umbrella.
#
# CI intentionally avoids enabling `audio_cpal` because it requires platform-specific system audio
# development libraries on Linux (e.g. ALSA headers). Developers can opt in locally via
# `--features audio_cpal`.
ci = [
  "a11y_debug",
  "avif",
  "audio_wav",
  "box_generation_demo",
  "browser_ui",
  "browser_ui_wayland",
  "disk_cache",
  "preserve3d_warp",
  "quickjs",
]

[dependencies]
fastrender-ipc = { path = "crates/fastrender-ipc" }
base64 = "0.22"
aes-gcm = "0.10"
aes = "0.8"
getrandom = "0.2"
fastrender-shmem = { path = "crates/fastrender-shmem" }
avif-decode = { version = "1.0", default-features = false, optional = true }
avif-parse = { version = "1.4", optional = true }
arboard = { version = "3.6", optional = true }
cpal = { version = "0.15", optional = true }
# Keep AccessKit versions aligned with egui/egui-winit 0.23 so we don't pull in a second
# (newer) winit via accesskit_winit.
accesskit = { version = "0.11", optional = true }
accesskit_winit = { version = "0.14", optional = true }
brotli = "6"
clap = { version = "4", features = ["derive", "env"] }
chrono = "0.4.42"
csscolorparser = "0.6"
cssparser = "0.35"
flate2 = "1"
encoding_rs = "0.8"
fs2 = { version = "0.4", optional = true }
fontdb = "0.23"
html5ever = "0.35"
 # Enable embedded hyphenation patterns so `hyphens: auto` works on real-world
 # pageset content in multiple languages.
 hyphenation = { version = "0.8", features = ["embed_all"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
jpeg-decoder = "0.3"
libwebp-sys = "0.9.6"
lru = "0.12"
kamadak-exif = "0.6"
markup5ever = "0.35"
markup5ever_rcdom = "0.35"
matroska-demuxer = { version = "0.7", optional = true }
memchr = "2.7"
memmap2 = "0.9"
mp4 = { version = "0.14", optional = true }
mp4parse = { version = "0.17", optional = true, features = ["unstable-api"] }
png = "0.18"
smallvec = "1.15"
parking_lot = "0.12"
percent-encoding = "2.3"
precomputed-hash = "0.1"
rayon = "1.10.0"
resvg = "0.43"
svgtypes = "0.15"
roxmltree = "0.20"
rustybuzz = "0.20"
rustc-hash = "2"
im = "15.1"
selectors = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
toml = "0.8"
pathdiff = "0.2"
glob = "0.3"
regex = "1"
tempfile = "3"
taffy = { path = "vendor/taffy" }
thiserror = "1.0"
tiny-skia = "0.11"
ttf-parser = "0.25"
unicode-bidi = "0.3"
unicode-bidi-mirroring = "0.4"
unicode-linebreak = "0.1"
unicode-segmentation = "1.11"
unicode-width = "0.1.11"
unicode-vo = "0.1"
unicode-general-category = "0.6"
icu_segmenter = { version = "2.1.1", features = ["compiled_data"] }
url = "2.5"
urlencoding = "2.1"
publicsuffix = "2.3"
symphonia-core = { version = "0.5.5", optional = true }
symphonia-codec-aac = { version = "0.5.5", optional = true }
openh264 = { version = "0.6.5", optional = true }
libvpx-sys-bundled = { path = "crates/libvpx-sys-bundled", optional = true }
opus = { version = "0.3", optional = true }
# Use Rustls to avoid requiring system OpenSSL headers/libs in CI/agent environments.
reqwest = { version = "0.12", default-features = false, optional = true, features = ["blocking", "cookies", "http2", "rustls-tls-webpki-roots"] }
ureq = { version = "3.1", default-features = false, optional = true, features = ["rustls"] }
tungstenite = { version = "0.21", default-features = false, optional = true, features = ["handshake", "rustls-tls-webpki-roots"] }
rustls = { version = "0.22", optional = true }
webpki-roots = { version = "0.26", optional = true }
tokio = { version = "1", optional = true, features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tokio-tungstenite = { version = "0.21", optional = true, default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", optional = true }
wuff = "0.2"
tar = "0.4"
sha2 = "0.10"
sha1 = "0.10"
httpdate = "1.0"
http = "1"
libc = "0.2"
rquickjs = { version = "0.9", optional = true, features = ["classes", "macro"] }
read-fonts = "0.20"
skrifa = "0.20"
walkdir = "2"
# Legacy heap-only WebIDL runtime adapter (vendored ecma-rs workspace).
webidl_js_runtime = { package = "webidl-js-runtime", path = "vendor/ecma-rs/webidl-runtime" }
webidl-vm-js = { path = "vendor/ecma-rs/webidl-vm-js" }
vm-js = { path = "vendor/ecma-rs/vm-js" }
parse-js = { path = "vendor/ecma-rs/parse-js", features = ["diagnostics"] }
diagnostics = { path = "vendor/ecma-rs/diagnostics" }
webidl = { path = "vendor/ecma-rs/webidl" }

# Optional desktop UI stack (winit + wgpu + egui) used by `src/bin/browser.rs`.
# Kept behind a feature gate so core renderer builds stay lean.
wgpu = { version = "0.17", optional = true }
egui = { version = "0.23", optional = true }
egui-wgpu = { version = "0.23", optional = true }
pollster = { version = "0.3", optional = true }
directories = { version = "5", optional = true }

# `winit`/`egui-winit` need a platform backend. On Linux we explicitly enable X11
# and keep default features off so CI doesn't need additional system packages
# for Wayland. See the `browser_ui_wayland` feature for optional Wayland support.
[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.28", default-features = false, features = ["x11"], optional = true }
egui-winit = { version = "0.23", default-features = false, features = ["x11", "clipboard", "accesskit"], optional = true }
# `rfd` is an optional dependency used for native file/color dialogs in the windowed browser UI.
# (The windowed `browser` app uses it for file inputs, bookmarks import/export, and page export save
# dialogs.)
#
# On Linux we explicitly select the `xdg-portal` backend and keep default features off so we don't
# pull in GTK system dependencies (CI-friendly on minimal hosts).
#
# Note: newer `rfd` releases use an `ashpd`/`zbus` stack with a higher MSRV; we pin `rfd` to 0.12 to
# keep the repo MSRV at Rust 1.70 (see CI `MSRV` job).
rfd = { version = "0.12", default-features = false, features = ["xdg-portal"], optional = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
winit = { version = "0.28", default-features = false, optional = true }
egui-winit = { version = "0.23", default-features = false, features = ["clipboard", "accesskit"], optional = true }
rfd = { version = "0.12", optional = true }

[[bin]]
name = "macos_sandbox_probe"
path = "src/bin/macos_sandbox_probe.rs"
test = false
bench = false
required-features = ["macos_sandbox_probe"]
[target.'cfg(windows)'.dependencies]
# Windows-only renderer sandboxing (AppContainer + restricted token + job objects).
# Keep feature set narrow: only APIs used by `src/sandbox/windows.rs`.
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_JobObjects",
  "Win32_System_Memory",
  "Win32_System_Threading",
] }
win-sandbox = { path = "crates/win-sandbox" }
[dev-dependencies]
criterion = "0.5"
filetime = "0.2"
rand = "0.8"
rand_chacha = "0.3"
usvg = "0.43"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "visit"] }
directories = "5"
fs2 = "0.4"
symphonia-format-isomp4 = "0.5.5"

[target.'cfg(windows)'.dev-dependencies]
# Used by Windows-only sandbox security tests.
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_Console",
  "Win32_System_Memory",
  "Win32_System_Threading",
] }
win-sandbox = { path = "crates/win-sandbox" }

[profile.dev]
# `xtask page-loop --debug` intentionally uses the dev profile to keep iteration quick, but pages
# like `tests/pages/fixtures/go.dev` are layout/text hotspots and can time out when critical
# dependencies are left completely unoptimized.
#
# Keep the root crate lightly optimized for a good dev experience while compiling dependencies at
# higher opt levels so the debug workflow remains usable on large fixtures.
opt-level = 1

[profile.dev.package.taffy]
opt-level = 3

[profile.dev.package.rustybuzz]
opt-level = 3

[profile.dev.package.ttf-parser]
opt-level = 3

[profile.dev.package.fontdb]
opt-level = 3

[profile.dev.package.resvg]
opt-level = 3

[profile.dev.package.usvg]
opt-level = 3

[profile.dev.package.tiny-skia]
opt-level = 3

[profile.dev.package.tiny-skia-path]
opt-level = 3

[profile.dev.package.vm-js]
# Work around rust-lld undefined hidden symbol failures when linking `vm-js` in the dev profile.
# This appears to be sensitive to incremental + many codegen units; compiling `vm-js` as a single
# codegen unit avoids emitting unresolved `.llvm.*` symbols into the rlib.
codegen-units = 1

[[bench]]
name = "perf_regressions"
harness = false

[[bench]]
name = "http_agent_pool"
harness = false

[[bench]]
name = "disk_cache_contention"
harness = false

[[bench]]
name = "cascade_bench"
harness = false

[[bench]]
name = "table_fixup_traversal"
harness = false

[[bench]]
name = "image_compare_bench"
harness = false

[[bench]]
name = "downloads_panel_ui"
harness = false

[[bin]]
name = "bench_compare"
path = "tools/bench_compare.rs"

[[bin]]
name = "browser_perf_log_summary"
path = "tools/browser_perf_log_summary.rs"

[[bin]]
name = "render_fixtures"
path = "src/bin/render_fixtures.rs"
test = false

[[bin]]
name = "browser"
path = "src/bin/browser.rs"
test = false
required-features = ["browser_ui"]

[[bench]]
name = "selector_bloom_bench"
harness = false

[[bench]]
name = "selector_link_bench"
harness = false

[[bench]]
name = "element_attr_cache_bench"
harness = false

[[bench]]
name = "selector_candidates_bench"
harness = false

[[bench]]
name = "layout_parallel"
harness = false

[[bench]]
name = "layout_hotspots"
harness = false

[[bench]]
name = "fragment_clone"
harness = false

[[bench]]
name = "dom_clone_bench"
harness = false

[[bench]]
name = "dom_parse_bench"
harness = false

[[bench]]
name = "html_parse_bench"
harness = false

[[bench]]
name = "css_parse_pageset"
harness = false

[[bench]]
name = "style_set_collectors"
harness = false

[[bench]]
name = "reshape_cache_bench"
harness = false

[[bench]]
name = "paint_benches"
harness = false

[[bench]]
name = "scroll_blit_bench"
harness = false

[[bench]]
name = "gradient_raster"
harness = false

[[bench]]
name = "audio_benches"
harness = false

[[bench]]
name = "chrome_frame_render"
harness = false

[[bench]]
name = "tab_strip_ui"
harness = false

[[bench]]
name = "bookmarks_manager_ui"
harness = false

[[bench]]
name = "bookmark_contains_url"
harness = false

[[bench]]
name = "history_search_tokens"
harness = false

[[bench]]
name = "omnibox_bookmarks"
harness = false

# Default release profile: fast compilation, good performance.
#
# This is what agents and developers use for day-to-day work. Optimized but
# without the extreme compilation cost of full LTO or aggressive optimizations.
[profile.release]
opt-level = 1         # Fast compilation, basic optimization
lto = false           # No LTO for fast iteration
codegen-units = 32    # Parallel codegen
strip = false         # Keep symbols for debugging/profiling
debug = 1             # Basic debug info for backtraces

# Maximum optimization profile for final distribution.
#
# Use only for shipping binaries. Extremely slow to compile (30-60 min for all targets).
#   cargo build --profile release-max --bin fetch_and_render
[profile.release-max]
inherits = "release"
lto = true            # Full link-time optimization
codegen-units = 1     # Maximum optimization (no parallelism)
strip = true          # Remove all symbols
debug = false         # No debug info

[profile.bench]
# Benchmarks should be representative (optimized) but also fast to build in CI/agent environments.
#
# The release profile enables LTO + single codegen unit for the smallest/fastest shipped binaries,
# but those settings can make `cargo bench` painfully slow on large crates (especially when many
# agents compile concurrently). Use a more compilation-friendly profile for benches.
opt-level = 2
lto = false
codegen-units = 64
debug = false
strip = false

[patch.crates-io]
cmake = { path = "vendor/cmake" }
selectors = { path = "vendor/selectors" }
