[package]
name = "fastrender-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
bincode = "1.3"
fastrender = { path = "..", optional = true }
fastrender-ipc = { path = "../crates/fastrender-ipc" }
libfuzzer-sys = "0.4"
rustybuzz = "0.20"
serde = "1"
ttf-parser = "0.25"
unicode-bidi = "0.3"

[features]
default = ["dep:fastrender"]

[workspace]
members = ["."]
resolver = "2"

[profile.release]
debug = 1

# Match the main crate's patched selectors dependency for fuzz builds.
[patch.crates-io]
selectors = { path = "../vendor/selectors" }

[[bin]]
name = "css_parser"
path = "fuzz_targets/css_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "selectors"
path = "fuzz_targets/selectors.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vars_and_calc"
path = "fuzz_targets/vars_and_calc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "svg_filters"
path = "fuzz_targets/svg_filters.rs"
test = false
doc = false
bench = false

[[bin]]
name = "animation_properties"
path = "fuzz_targets/animation_properties.rs"
test = false
doc = false
bench = false

[[bin]]
name = "color_fonts"
path = "fuzz_targets/color_fonts.rs"
test = false
doc = false
bench = false

[[bin]]
name = "render_pipeline"
path = "fuzz_targets/render_pipeline.rs"
test = false
doc = false
bench = false

[[bin]]
name = "html_scanners"
path = "fuzz_targets/html_scanners.rs"
test = false
doc = false
bench = false

[[bin]]
name = "image_decoding"
path = "fuzz_targets/image_decoding.rs"
test = false
doc = false
bench = false

[[bin]]
name = "accessibility_tree"
path = "fuzz_targets/accessibility_tree.rs"
test = false
doc = false
bench = false

[[bin]]
name = "svg_glyph_sanitizer"
path = "fuzz_targets/svg_glyph_sanitizer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "text_shaping"
path = "fuzz_targets/text_shaping.rs"
test = false
doc = false
bench = false

[[bin]]
name = "text_line_break"
path = "fuzz_targets/text_line_break.rs"
test = false
doc = false
bench = false

[[bin]]
name = "site_key"
path = "fuzz_targets/site_key.rs"
test = false
doc = false
bench = false

[[bin]]
name = "process_assignment"
path = "fuzz_targets/process_assignment.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ipc_messages"
path = "fuzz_targets/ipc_messages.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ipc_decode"
path = "fuzz_targets/ipc_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "media_timebase"
path = "fuzz_targets/media_timebase.rs"
test = false
doc = false
bench = false

[[bin]]
name = "media_av_sync"
path = "fuzz_targets/media_av_sync.rs"
test = false
doc = false
bench = false

[[bin]]
name = "audio_ring_buffer"
path = "fuzz_targets/audio_ring_buffer.rs"
test = false
doc = false
bench = false
