[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"
# `cargo test -p xtask` is used for lightweight repo hygiene checks (doc lints, etc.). Building the
# full `xtask` binary as a test harness pulls in the entire renderer dependency graph, which is slow
# and may fail independently of the test-only checks. Disable unit-test harnesses for the binary and
# rely on integration tests under `xtask/tests/`.
test = false

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
conformance-harness = { path = "../engines/ecma-rs/conformance-harness" }
fastrender = { path = ".." }
js-wpt-dom-runner = { path = "../crates/js-wpt-dom-runner" }
webidl-ir = { path = "../crates/webidl-ir" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
sha2 = "0.10"
url = "2.5"
walkdir = "2.5"
tempfile = "3.10"
cssparser = "0.35"
image = { version = "0.25", default-features = false, features = ["png"] }
pathdiff = "0.2"
