[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"
# `cargo test -p xtask` is used for lightweight repo hygiene checks (doc lints, etc.). Building the
# full `xtask` binary as a test harness pulls in the entire renderer dependency graph, which is slow
# and may fail independently of the test-only checks. Disable unit-test harnesses for the binary and
# rely on integration tests under `xtask/tests/`.
test = false

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
conformance-harness = { path = "../vendor/ecma-rs/conformance-harness" }
# `xtask` uses a tiny subset of the renderer crate (mostly committed WebIDL snapshots) and should
# stay as lightweight as possible. Avoid compiling optional heavy dependencies (e.g. AVIF via
# `libaom-sys`) when building `xtask` and its integration tests.
fastrender = { path = "..", default-features = false }
# `xtask js wpt-dom` defaults to exercising the in-tree vm-js backend, so ensure that backend is
# compiled in when building xtask.
js-wpt-dom-runner = { path = "../crates/js-wpt-dom-runner", features = ["vmjs"] }
webidl = { path = "../vendor/ecma-rs/webidl" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
globset = "0.4"
sha2 = "0.10"
url = "2.5"
walkdir = "2.5"
tempfile = "3.10"
cssparser = "0.35"
image = { version = "0.25", default-features = false, features = ["png"] }
pathdiff = "0.2"
toml = "0.8"
serde_yaml = "0.9"
