[package]
name = "js-wpt-dom-runner"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["vmjs"]

# `ecma-rs/vm-js` backend (default).
vmjs = ["dep:vm-js", "dep:parse-js"]

# QuickJS (`rquickjs`) backend (optional). Useful for comparison/debugging, but it is not
# deterministic (timers are wall-clock based) and provides only minimal DOM shims.
quickjs = ["dep:rquickjs"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
conformance-harness = { path = "../../engines/ecma-rs/conformance-harness" }
globset = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
url = "2.5"
walkdir = "2"
html5ever = "0.35"
markup5ever_rcdom = "0.35"
rquickjs = { version = "0.9", optional = true }
vm-js = { path = "../../engines/ecma-rs/vm-js", optional = true }
parse-js = { path = "../../engines/ecma-rs/parse-js", optional = true }
