[package]
name = "js-wpt-dom-runner"
version = "0.1.0"
edition = "2021"
publish = false

[features]
# Keep the default build of this crate lightweight so tooling/tests that only need corpus discovery
# (e.g. `cargo test -p js-wpt-dom-runner --test corpus_validation`) do not have to compile the full
# FastRender renderer + vm-js embedding.
#
# Consumers that need to actually *execute* the corpus (xtask + CI) should enable `vmjs`.
default = []

# `ecma-rs/vm-js` backend (default).
vmjs = ["dep:vm-js", "dep:webidl-vm-js", "dep:fastrender"]

# QuickJS (`rquickjs`) backend (optional). Useful for comparison/debugging, but it is not
# deterministic (timers are wall-clock based) and provides only minimal DOM shims.
quickjs = ["dep:rquickjs", "dep:markup5ever"]

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
conformance-harness = { path = "../../vendor/ecma-rs/conformance-harness" }
# Only needed for the `vm-js` backend. Keep it optional so non-execution tooling (like the offline
# corpus validator) can stay lean.
#
# `default-features = false` avoids pulling in heavyweight renderer features (e.g. AVIF decoding via
# libaom-sys) when running the offline conformance runner.
fastrender = { path = "../..", default-features = false, optional = true, features = ["vmjs"] }
globset = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1.0"
url = "2.5"
walkdir = "2"
html5ever = "0.35"
markup5ever = { version = "0.35", optional = true }
markup5ever_rcdom = "0.35"
rquickjs = { version = "0.9", optional = true }
vm-js = { path = "../../vendor/ecma-rs/vm-js", optional = true }
# NOTE: `webidl-vm-js` is vendored from `ecma-rs` (FastRender no longer carries a workspace-local
# adapter crate after WebIDL consolidation).
webidl-vm-js = { path = "../../vendor/ecma-rs/webidl-vm-js", optional = true }
