[package]
name = "webidl-vm-js"
version = "0.1.0"
edition = "2021"
publish = false
readme = "README.md"
description = "FastRender workspace-local adapter for ecma-rs webidl <-> vm-js"

[dependencies]
vm-js = { path = "../../vendor/ecma-rs/vm-js" }
webidl = { path = "../../vendor/ecma-rs/webidl" }
webidl-bindings-core = { path = "../webidl-bindings-core" }
webidl-ir = { path = "../webidl-ir" }
