[package]
name = "win-sandbox"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
publish = false

[dependencies]
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_JobObjects",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
] }
